viewer title truncate ui issue
(cherry picked from commit bb48a03cb28bc65118c06aa9932a48d93149d86d)

--- a/Rainmaker2/src/Presentation/admin/MCU/public/assets/css/pspdfkit-styles.css
+++ b/Rainmaker2/src/Presentation/admin/MCU/public/assets/css/pspdfkit-styles.css
@@ -28,8 +28,10 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 270px;
+  max-width: 100%;
+  flex: 45 1 0%;
   display: block;
+  text-align: left;
 
 }
   .PSPDFKit-Root{
